--- a/2024-04-22-dense-and-terse-cv.org
+++ b/2024-04-22-dense-and-terse-cv.org
@@ -4,7 +4,7 @@ layout: post
 title: Anton S. Kosinov
 tagline: " what do I do professionally"
 permalink: /dense_cv.html
-categories: [CV]
+categories: [CV, Automation Engineering]
 tags: [cv, info, about me]
 ---
 #+END_EXPORT
@@ -105,4 +105,44 @@ Freelance Software Developer
 ** ODesk Inc.
 *** 2008 --- 2013
 Freelance Software Developer
+** Maintenance Engineer
 
+The duties of a maintenance engineer typically revolve around ensuring that machinery, systems, infrastructure, and equipment run optimally with minimal downtime. These responsibilities include:
+
+1. **Conducting and overseeing maintenance process audits**[1].
+2. **Diagnosing faults**[1].
+3. **Undertaking planned maintenance**[1].
+4. **Establishing different maintenance procedures and protocols**[1].
+5. **Training staff on equipment operating and maintenance procedures**[1].
+6. **Responding to major equipment breakdowns**[1].
+7. **Forecasting and strategic planning for system overhauls and upgrades, while taking into account long-term maintenance costs**[1].
+8. **Supervising other engineering and technical staff**[1].
+9. **Procuring, testing, and commissioning specialist components, fixtures, or fittings**[1].
+10. **Working with the maintenance director and other executives to manage budgets**[1].
+11. **Setting and tracking maintenance KPIs**[1].
+12. **Playing an active role in helping the organization set up and execute preventive maintenance, predictive maintenance, or any other preferred maintenance program**[1].
+
+Additionally, maintenance engineers may also be involved in:
+
+1. **Designing maintenance strategies, procedures, and methods**[2].
+2. **Carrying out routine maintenance work and responding to equipment faults**[2].
+3. **Fitting new parts and ensuring equipment is working correctly**[2].
+4. **Carrying out quality inspections on jobs**[2].
+5. **Liaising with client departments, customers, and other engineering and production colleagues**[2].
+6. **Arranging specialist procurement of fixtures, fittings, or components**[2].
+7. **Controlling maintenance tools, stores, and equipment**[2].
+8. **Monitoring and controlling maintenance costs**[2].
+9. **Dealing with emergencies, unplanned problems, and repairs**[2].
+10. **Improving health and safety policies and procedures**[2].
+11. **Working with specialist equipment, such as programmable logic controllers (PLC), which control machinery on factory assembly lines**[2].
+12. **Writing maintenance strategies to help with installation and commissioning guidelines**[2].
+13. **Ensuring there is continuous cover of the machinery and equipment in case of breakdowns**[2].
+
+Maintenance engineers work in a variety of environments, including industrial settings, and their duties can vary depending on the company and the specific role. However, their primary goal is to ensure that equipment and machinery run smoothly and reliably, and that maintenance is carried out efficiently and effectively[1][2][3][4][5].
+
+Citations:
+[1] https://limblecmms.com/blog/maintenance-engineer/
+[2] https://www.prospects.ac.uk/job-profiles/maintenance-engineer
+[3] https://www.randstad.co.uk/career-advice/job-profiles/maintenance-engineer/
+[4] https://www.totaljobs.com/advice/maintenance-engineer-job-description
+[5] https://www.betterteam.com/maintenance-engineer-job-description
