--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -37,6 +37,15 @@ sequence. Yes, it sounds appealing, but it might be a /herculian
 effort/ to resolve this issue neglecting several well-known nowadays
 pequliarities of human cognition.
 
+In times of crisis, many of us ponder existential questions about health,
+security, purpose, career, family, and legacy. However, more often than
+not, such contemplation is short-lived. The demands of everyday life — the
+here and now — can overwhelm us, leaving little time to think about the
+long term and what we are working toward. As a result, when faced with
+life decisions both big and small, we are left with nothing to guide us
+but emotion or intuition.
+
+
 * Premises
 
 ** Biology
