A couple of relevant notes

--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -328,6 +328,11 @@ back from a separate file.
 
 
  
+** Temperature and Noise
+
+
+** Long-term planning
+ 
 ** An Insight Incubation
 
 It requires a lot of time to figure out what exactly your idea is.
