The postulates of the note-taking system

--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -78,6 +78,38 @@ read its documentation. Yes, it is not easy to do, so we are on the
 right path.
 
 
+
+* The postulates
+
+** Write down everything
+
+that it is possible to write.
+
+It is the /fleeting notes/ spawning. Yes, they are raw, but it is the
+case to find a =pearl in the mud=. Just be patient.
+
+** All that was written
+
+ought to be reviewed several times, categorised and evaluated. Yes, it requires a
+lot of time, it is a rough task and demands a Herculian effort and a
+lot of time.
+
+** The insight requires an incubation
+
+As the pure diamond requires to be elaborated to refine its unique
+startling properties, the ~raw note~ is seldom ready for contemplating
+about its essence. A context matters!
+
+** Rectify them
+
+Often it is useful to rephrase it to obtain clarity.
+
+** Entwine them together
+
+Often they are interrelated. Be cautious, please!
+
+
+
 * A natrual way to make notes
 
 Historically all this fuss around the notes has been successfully
