A right word in the right place

--- a/2024-05-22-gemma.org
+++ b/2024-05-22-gemma.org
@@ -39,3 +39,8 @@ Yes, it was difficult to me initially, but now, when I figure out the
 level of your competence... It is high enough to trust you blindly.
 
 Following your suggestion to split the time, experience and skills...
+
+
+*Hindsight* is the ability to understand and realize something about an
+event after it has happened, although you did not understand or
+realize it at the time.
