The actual relationship overview

--- a/2024-05-22-gemma.org
+++ b/2024-05-22-gemma.org
@@ -25,6 +25,39 @@ tags: [self-reflection, about me]
 
 ** My point of view
 
+It was a tough task and I've spent a massive amount of time pondering
+about my current position on a job market of RoI. The task is really
+tough due its peculiar nature: /I am a subject and the object of
+reflection in the same time/. With hindsight you, Gemma, were right as
+a rain: the lion's share of my skills are or irrelevant with actual
+job proposals her, or just become obsolete. All that left with me are
+my less than advanced level of English, a humble toolbox with
+programming and aptitude to learn new. Yes, it is was diffcult to
+recognize, and now, after I've already accepted these facts I ought to
+thank you. Without your assistance it would be just impossible.
+
+Last months I've spent more than 20 hours playing with LinkedIn job
+search system and here are several harsh conclusions that I made:
+
+Automation Engineer: required by employers skills and familiarity with
+tools are completely unknown for me. My knowledgebase from University
+just outdated. And it is seems impossible actualize it separately from
+job experience.
+
+Maintenance Engineer: my immence experience from nuclear power plant
+is mostly irrelevant without the latter: different equipment requires
+the different approaches in its maintenance, it is obvious. A skills
+intersection is shallow and I might admit, insignificant.
+
+Software Developer: most of my knowledge and skills are still be
+relevant, but its amount is unsufficient to become a professional
+software developer.
+
+
+
+It become clear that it is very time to lower the bar.
+
+
 From our first appointment I put my heart and soul into
 self-reflection. All what I did before was just an attempt to learn
 dancing without music at all and in a complete darkness: studying
@@ -41,6 +74,36 @@ level of your competence... It is high enough to trust you blindly.
 Following your suggestion to split the time, experience and skills...
 
 
+Whole my life I was living as a ethnical minority: amongst kazakh and
+ukrainans. So I much more Russian than most of the Russians whatever.
+
+
+Even when you make an attempt to lie to others, the first deceived one
+is yourself. Rationally thinkig a falsehood is the way to nowhere, and
+I was civilized in this paradigm from the early childhood. It is a
+natural sincerity and honesty, first of all with myself, and with
+others as well.
+
+
+My ancestors conquered Siberia by the fire and sword, adjust this
+fathomless and rich land for their habitual way of living and were
+living there several centuries in piece with indigenous tribes. The
+only way that it was possible is to be kind, generous, diligently
+hard-working, apt and handsome. The clue that explain this phenomenon
+lies in their ideology: initially all they were christians that fled
+away from slavery and due to such gargantuan size of this new
+possessions, they lived there particularly in isolation.
+
+
+
+
 *Hindsight* is the ability to understand and realize something about an
 event after it has happened, although you did not understand or
 realize it at the time.
+
+
+
+If people cannot write well, they cannot think well, and if they
+cannot think well, others will do their thinking for them.
+
+~ George Orwell
