--- a/2024-05-22-gemma.org
+++ b/2024-05-22-gemma.org
@@ -30,7 +30,7 @@ about my current position on a job market of RoI. The task is really
 tough due its peculiar nature: /I am a subject and the object of
 reflection in the same time/. With hindsight you, Gemma, were right as
 a rain: the lion's share of my skills are or irrelevant with actual
-job proposals her, or just become obsolete. All that left with me are
+job proposals here, or just become obsolete. All that left with me are
 my less than advanced level of English, a humble toolbox with
 programming and aptitude to learn new. Yes, it is was diffcult to
 recognize, and now, after I've already accepted these facts I ought to
@@ -44,16 +44,14 @@ tools are completely unknown for me. My knowledgebase from University
 just outdated. And it is seems impossible actualize it separately from
 job experience.
 
-Maintenance Engineer: my immence experience from nuclear power plant
-is mostly irrelevant without the latter: different equipment requires
-the different approaches in its maintenance, it is obvious. A skills
-intersection is shallow and I might admit, insignificant.
+Maintenance Engineer: my immence experience gained at nuclear power
+plant is mostly irrelevant without the latter: different equipment
+requires the different approaches in its maintenance, it is obvious. A
+skills intersection is shallow and I might admit, insignificant.
 
 Software Developer: most of my knowledge and skills are still be
 relevant, but its amount is unsufficient to become a professional
 software developer.
-
-
 
 It become clear that it is very time to lower the bar.
 
